<resources>
    <string name="app_name">IP Scan</string>
    <string name="ip_from">IPs from:</string>
    <string name="ip_to">IPs to:</string>
    <string name="ip_et_hint">255</string>
    <string name="start_scan">Start</string>

    <string name="please_select">Please select:</string>
    <string name="single_host">Single host</string>
    <string name="host_range">Host range</string>
    <string name="next">Next</string>
    <string name="url_or_ip">Enter IP</string>
    <string name="def_url">62.109.9.97</string>
    <string name="please_wait">Please wait…</string>
    <string name="start_way_2">Start (method 2)</string>

    <string name="through_service">Through Service</string>
    <string name="start_networking_service">Start Networking Service</string>
    <string name="start_service">Start Scan Service with test params</string>
    <string name="add_scan_job">Add Scan Job</string>
    <string name="stop_service">Stop Service</string>
    <string name="scan_service_description">A service that scans a certain range of ip addresses and ports in a separate thread</string>
    <string name="network_service_description">A service that </string>
    <string name="test">test</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>

    <string name="scan_service_title">Scanning in progress…</string>
    <string name="scan_service_descr">Please dont\'t kill the app!</string>

    <string name="get_scan_job_service_title">IP Scanner</string>
    <string name="get_scan_job_service_descr">Waiting for tasks to scan…</string>
</resources>
